--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "baseHref": "My-Portfolio",
             "outputPath": "dist/my_app",
             "index": "src/index.html",
             "browser": "src/main.ts",
